--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,25 +47,25 @@ jobs:
           name: firefox-source
           path: extension/
 
-  # publish-chrome:
-  #   name: Publish to Chrome Web Store
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   steps:
-  #     - name: Download Chromium package
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         name: chromium-package
+  publish-chrome:
+    name: Publish to Chrome Web Store
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download Chromium package
+        uses: actions/download-artifact@v4
+        with:
+          name: chromium-package
 
-  #     - name: Upload to Chrome Web Store
-  #       uses: mnao305/chrome-extension-upload@v5.0.0
-  #       with:
-  #         file-path: chromium-package.zip
-  #         extension-id: ${{ secrets.CHROME_EXTENSION_ID }}
-  #         client-id: ${{ secrets.CHROME_CLIENT_ID }}
-  #         client-secret: ${{ secrets.CHROME_CLIENT_SECRET }}
-  #         refresh-token: ${{ secrets.CHROME_REFRESH_TOKEN }}
-  #         publish: false
+      - name: Upload to Chrome Web Store
+        uses: mnao305/chrome-extension-upload@v5.0.0
+        with:
+          file-path: chromium-package.zip
+          extension-id: ${{ secrets.CHROME_EXTENSION_ID }}
+          client-id: ${{ secrets.CHROME_CLIENT_ID }}
+          client-secret: ${{ secrets.CHROME_CLIENT_SECRET }}
+          refresh-token: ${{ secrets.CHROME_REFRESH_TOKEN }}
+          publish: false
 
   publish-firefox:
     name: Publish to Firefox Add-on Store
